--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="aKbaC7j4jAZ8CdoR7rBGIJdJl-PMItdqzfR0hfRb1DA" />
     <link rel="icon" src="../src/assets/Portrait.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
